# Disaster-Oriented-Programming

./: .gitignore  .~lock.data.csv#  Admin.cpp  Admin.h  AssistantProvost.cpp  AssistantProvost.h  AssistantProvostFood.h  AssistantProvostHall.h  AssistantProvostICT.h  AssistantProvostPD.h  AssistantToProvost.cpp  AssistantToProvost.h  AssistantToProvostCafeteria.h  AssistantToProvostHall.h  CMakeLists.txt  Provost.cpp  Provost.h  README.md  User.cpp  User.h  complaint.cpp  complaint.hpp  data.csv  main.cpp  user.cpp
Messages/: 117Read.txt
Niamul/: main.cpp
database/: data.csv  pending.csv
include/: Admin.hpp  AssistantProvost.hpp  AssistantProvostFood.hpp  AssistantProvostHall.hpp  AssistantProvostICT.hpp  AssistantProvostPD.hpp  AssistantToProvost.hpp  AssistantToProvostCafeteria.hpp  AssistantToProvostHall.hpp  Authorization.hpp  Provost.hpp  all.hpp  complaint.hpp  database_handler.hpp  message.hpp  notice_board.hpp  person.hpp  student.hpp  student_database.hpp  user.hpp
src/: Admin.cpp  AssistantProvost.cpp  AssistantToProvost.cpp  Authorization.cpp  Provost.cpp  complaint.cpp  database_handler.cpp  main.cpp  message.cpp  notice_board.cpp  person.cpp  student.cpp  student_database.cpp  user.cpp
